# ChangeLog for dev-lang/python
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.156 2005/08/15 21:31:11 kloeri Exp $

  15 Aug 2005; Bryan Østergaard <kloeri@gentoo.org> python-2.3.5-r1.ebuild,
  python-2.4.1-r1.ebuild:
  Fix bug 88777 in ~arch versions.

  11 Aug 2005; Mike Frysinger <vapier@gentoo.org>
  +files/python-2.4.1-bindir-libdir.patch,
  +files/python-2.4.1-crosscompile.patch, python-2.4.1-r1.ebuild:
  Add support for cross-compiling.  Grabbed patches from uClibc/OpenEmbedded.

  19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
  +files/python-2.4.1-st_flags.patch, python-2.4.1-r1.ebuild:
  Update st_flags patch, bug 94637.

  03 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> python-2.3.5.ebuild:
  Stable on alpha.

  27 Jun 2005; Markus Rothe <corsair@gentoo.org> python-2.3.5.ebuild:
  Stable on ppc64

  18 Jun 2005; Markus Rothe <corsair@gentoo.org> python-2.4.1-r1.ebuild:
  added ~ppc64

*python-2.4.1-r1 (16 Jun 2005)
*python-2.3.5-r1 (16 Jun 2005)

  16 Jun 2005; Bryan Østergaard <kloeri@gentoo.org>
  +files/python-2.3.5-st_flags.patch, +python-2.3.5-r1.ebuild,
  +python-2.4.1-r1.ebuild:
  Add st_flags patch, requested in bug 94637.

  09 Jun 2005; Herbie Hopkins <herbs@gentoo.org>
  files/python-2.4.1-libdir.patch, python-2.4.1.ebuild:
  Fix libdir patch to work with amd64s no-symlink profile, removed
  append-flags -fPIC as this seems to no longer be necessary.

  29 May 2005; <solar@gentoo.org> python-2.3.4-r1.ebuild, python-2.3.5.ebuild,
  python-2.4-r3.ebuild, python-2.4.1.ebuild:
  echangelog - update package to use libc expanded variable elibc_uclibc vs
  uclibc so USE=-* works

  29 May 2005; Alastair Tse <liquidx@gentoo.org>
  files/python-2.4.1-libdir.patch:
  remove zlib from libpython dependency (#90545)

  28 May 2005; Bryan Østergaard <kloeri@gentoo.org> python-2.1.3-r1.ebuild,
  python-2.2.3-r6.ebuild, python-2.3.4-r1.ebuild, python-2.3.5.ebuild,